--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.15.3",
-    "helmet": "^3.8.1",
+    "animate.css": "^3.5.2",
     "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "hashids": "^1.1.1",
+    "helmet": "^3.8.1",
+    "keen.io": "^0.1.3",
+    "pouchdb": "^6.3.4",
     "pouchdb-adapter-http": "^6.3.4",
     "pouchdb-upsert": "^2.2.0",
-    "pouchdb": "^6.3.4",
     "ramda": "^0.24.1",
-    "hashids": "^1.1.1",
-    "keen.io": "^0.1.3"
+    "tachyons": "^4.7.4"
   },
   "engines": {
     "node": "8.x"
@@ -29,5 +31,8 @@
   "license": "MIT",
   "keywords": [
     "getlibs"
-  ]
+  ],
+  "devDependencies": {
+    "dotenv": "^4.0.0"
+  }
 }
